--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <h1 class="center">Practice Time!</h1> -->
 <app-header/>
-<app-user-input/>
+<app-user-input (calculate)="calculateInvestmentResults($event)"/>
+<app-invesment-results [tabledata]="tabledata"/>
