--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <h1 class="center">Practice Time!</h1> -->
 <app-header/>
 <app-user-input (calculate)="calculateInvestmentResults($event)"/>
-<app-invesment-results [tabledata]="tabledata"/>
+<app-invesment-results [tabledata]="mytabledata"/>
+
+<!-- <app-invesment-results></app-invesment-results> -->
